# xontrib-dotdot

./: LICENSE  README.md  pyproject.toml
tests/: test_xontrib.py
xontrib_dotdot/: main.py
